src/test/deca/context/invalid/without_class/incompatible_type_leq_bool_bool.deca
// Description:
//    Error : operator comparison not defined with type string
//
// Result:
//    INCOMPATIBLE_TYPE_OPERATOR: Type \(.\)\+ is incompatible with type \(.\)\+ for the operator \(.\)\+
//    line 9
{
    int a = 1;
    if (true >= false) {
        println("bool type not compatible with the operator '>='");
    } 
}